--- a/ML_semester3.ipynb
+++ b/ML_semester3.ipynb
@@ -1442,7 +1442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2293,28 +2293,192 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\j0rd4\\anaconda3\\envs\\no\\Lib\\site-packages\\sklearn\\model_selection\\_validation.py:540: FitFailedWarning: \n",
+      "600 fits failed out of a total of 1125.\n",
+      "The score on these train-test partitions for these parameters will be set to nan.\n",
+      "If these failures are not expected, you can try to debug them by setting error_score='raise'.\n",
+      "\n",
+      "Below are more details about the failures:\n",
+      "--------------------------------------------------------------------------------\n",
+      "75 fits failed with the following error:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\j0rd4\\anaconda3\\envs\\no\\Lib\\site-packages\\sklearn\\model_selection\\_validation.py\", line 888, in _fit_and_score\n",
+      "    estimator.fit(X_train, y_train, **fit_params)\n",
+      "  File \"c:\\Users\\j0rd4\\anaconda3\\envs\\no\\Lib\\site-packages\\sklearn\\base.py\", line 1473, in wrapper\n",
+      "    return fit_method(estimator, *args, **kwargs)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\j0rd4\\anaconda3\\envs\\no\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py\", line 1194, in fit\n",
+      "    solver = _check_solver(self.solver, self.penalty, self.dual)\n",
+      "             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\j0rd4\\anaconda3\\envs\\no\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py\", line 67, in _check_solver\n",
+      "    raise ValueError(\n",
+      "ValueError: Solver sag supports only 'l2' or None penalties, got l1 penalty.\n",
+      "\n",
+      "--------------------------------------------------------------------------------\n",
+      "75 fits failed with the following error:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\j0rd4\\anaconda3\\envs\\no\\Lib\\site-packages\\sklearn\\model_selection\\_validation.py\", line 888, in _fit_and_score\n",
+      "    estimator.fit(X_train, y_train, **fit_params)\n",
+      "  File \"c:\\Users\\j0rd4\\anaconda3\\envs\\no\\Lib\\site-packages\\sklearn\\base.py\", line 1473, in wrapper\n",
+      "    return fit_method(estimator, *args, **kwargs)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\j0rd4\\anaconda3\\envs\\no\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py\", line 1194, in fit\n",
+      "    solver = _check_solver(self.solver, self.penalty, self.dual)\n",
+      "             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\j0rd4\\anaconda3\\envs\\no\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py\", line 67, in _check_solver\n",
+      "    raise ValueError(\n",
+      "ValueError: Solver lbfgs supports only 'l2' or None penalties, got l1 penalty.\n",
+      "\n",
+      "--------------------------------------------------------------------------------\n",
+      "75 fits failed with the following error:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\j0rd4\\anaconda3\\envs\\no\\Lib\\site-packages\\sklearn\\model_selection\\_validation.py\", line 888, in _fit_and_score\n",
+      "    estimator.fit(X_train, y_train, **fit_params)\n",
+      "  File \"c:\\Users\\j0rd4\\anaconda3\\envs\\no\\Lib\\site-packages\\sklearn\\base.py\", line 1473, in wrapper\n",
+      "    return fit_method(estimator, *args, **kwargs)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\j0rd4\\anaconda3\\envs\\no\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py\", line 1194, in fit\n",
+      "    solver = _check_solver(self.solver, self.penalty, self.dual)\n",
+      "             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\j0rd4\\anaconda3\\envs\\no\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py\", line 67, in _check_solver\n",
+      "    raise ValueError(\n",
+      "ValueError: Solver newton-cholesky supports only 'l2' or None penalties, got l1 penalty.\n",
+      "\n",
+      "--------------------------------------------------------------------------------\n",
+      "75 fits failed with the following error:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\j0rd4\\anaconda3\\envs\\no\\Lib\\site-packages\\sklearn\\model_selection\\_validation.py\", line 888, in _fit_and_score\n",
+      "    estimator.fit(X_train, y_train, **fit_params)\n",
+      "  File \"c:\\Users\\j0rd4\\anaconda3\\envs\\no\\Lib\\site-packages\\sklearn\\base.py\", line 1473, in wrapper\n",
+      "    return fit_method(estimator, *args, **kwargs)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\j0rd4\\anaconda3\\envs\\no\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py\", line 1194, in fit\n",
+      "    solver = _check_solver(self.solver, self.penalty, self.dual)\n",
+      "             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\j0rd4\\anaconda3\\envs\\no\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py\", line 75, in _check_solver\n",
+      "    raise ValueError(\n",
+      "ValueError: Only 'saga' solver supports elasticnet penalty, got solver=liblinear.\n",
+      "\n",
+      "--------------------------------------------------------------------------------\n",
+      "75 fits failed with the following error:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\j0rd4\\anaconda3\\envs\\no\\Lib\\site-packages\\sklearn\\model_selection\\_validation.py\", line 888, in _fit_and_score\n",
+      "    estimator.fit(X_train, y_train, **fit_params)\n",
+      "  File \"c:\\Users\\j0rd4\\anaconda3\\envs\\no\\Lib\\site-packages\\sklearn\\base.py\", line 1473, in wrapper\n",
+      "    return fit_method(estimator, *args, **kwargs)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\j0rd4\\anaconda3\\envs\\no\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py\", line 1194, in fit\n",
+      "    solver = _check_solver(self.solver, self.penalty, self.dual)\n",
+      "             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\j0rd4\\anaconda3\\envs\\no\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py\", line 67, in _check_solver\n",
+      "    raise ValueError(\n",
+      "ValueError: Solver sag supports only 'l2' or None penalties, got elasticnet penalty.\n",
+      "\n",
+      "--------------------------------------------------------------------------------\n",
+      "75 fits failed with the following error:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\j0rd4\\anaconda3\\envs\\no\\Lib\\site-packages\\sklearn\\model_selection\\_validation.py\", line 888, in _fit_and_score\n",
+      "    estimator.fit(X_train, y_train, **fit_params)\n",
+      "  File \"c:\\Users\\j0rd4\\anaconda3\\envs\\no\\Lib\\site-packages\\sklearn\\base.py\", line 1473, in wrapper\n",
+      "    return fit_method(estimator, *args, **kwargs)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\j0rd4\\anaconda3\\envs\\no\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py\", line 1194, in fit\n",
+      "    solver = _check_solver(self.solver, self.penalty, self.dual)\n",
+      "             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\j0rd4\\anaconda3\\envs\\no\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py\", line 67, in _check_solver\n",
+      "    raise ValueError(\n",
+      "ValueError: Solver lbfgs supports only 'l2' or None penalties, got elasticnet penalty.\n",
+      "\n",
+      "--------------------------------------------------------------------------------\n",
+      "75 fits failed with the following error:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\j0rd4\\anaconda3\\envs\\no\\Lib\\site-packages\\sklearn\\model_selection\\_validation.py\", line 888, in _fit_and_score\n",
+      "    estimator.fit(X_train, y_train, **fit_params)\n",
+      "  File \"c:\\Users\\j0rd4\\anaconda3\\envs\\no\\Lib\\site-packages\\sklearn\\base.py\", line 1473, in wrapper\n",
+      "    return fit_method(estimator, *args, **kwargs)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\j0rd4\\anaconda3\\envs\\no\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py\", line 1204, in fit\n",
+      "    raise ValueError(\"l1_ratio must be specified when penalty is elasticnet.\")\n",
+      "ValueError: l1_ratio must be specified when penalty is elasticnet.\n",
+      "\n",
+      "--------------------------------------------------------------------------------\n",
+      "75 fits failed with the following error:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\j0rd4\\anaconda3\\envs\\no\\Lib\\site-packages\\sklearn\\model_selection\\_validation.py\", line 888, in _fit_and_score\n",
+      "    estimator.fit(X_train, y_train, **fit_params)\n",
+      "  File \"c:\\Users\\j0rd4\\anaconda3\\envs\\no\\Lib\\site-packages\\sklearn\\base.py\", line 1473, in wrapper\n",
+      "    return fit_method(estimator, *args, **kwargs)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\j0rd4\\anaconda3\\envs\\no\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py\", line 1194, in fit\n",
+      "    solver = _check_solver(self.solver, self.penalty, self.dual)\n",
+      "             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\j0rd4\\anaconda3\\envs\\no\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py\", line 67, in _check_solver\n",
+      "    raise ValueError(\n",
+      "ValueError: Solver newton-cholesky supports only 'l2' or None penalties, got elasticnet penalty.\n",
+      "\n",
+      "  warnings.warn(some_fits_failed_message, FitFailedWarning)\n",
+      "c:\\Users\\j0rd4\\anaconda3\\envs\\no\\Lib\\site-packages\\sklearn\\model_selection\\_search.py:1103: UserWarning: One or more of the test scores are non-finite: [0.89512807        nan        nan 0.87866911        nan 0.89291313\n",
+      " 0.88689598 0.89031372 0.87951277 0.88953973        nan        nan\n",
+      "        nan        nan        nan 0.89513285        nan        nan\n",
+      " 0.88717962        nan 0.89291313 0.89012341 0.88986743 0.88672249\n",
+      " 0.88953973        nan        nan        nan        nan        nan\n",
+      " 0.89512845        nan        nan 0.89014876        nan 0.89291313\n",
+      " 0.89043267 0.88954956 0.88947854 0.88953973        nan        nan\n",
+      "        nan        nan        nan 0.89632362        nan        nan\n",
+      " 0.88201112        nan 0.89594149 0.89074013 0.8923385  0.8821541\n",
+      " 0.89572507        nan        nan        nan        nan        nan\n",
+      " 0.89624479        nan        nan 0.8906676         nan 0.89594149\n",
+      " 0.89303301 0.89432106 0.89074503 0.89572507        nan        nan\n",
+      "        nan        nan        nan 0.89625993        nan        nan\n",
+      " 0.89365886        nan 0.89594149 0.89290643 0.89547122 0.89373414\n",
+      " 0.89572507        nan        nan        nan        nan        nan\n",
+      " 0.89530099        nan        nan 0.88239995        nan 0.89583881\n",
+      " 0.89110364 0.89168208 0.88244795 0.89562478        nan        nan\n",
+      "        nan        nan        nan 0.8953056         nan        nan\n",
+      " 0.89093469        nan 0.89583881 0.8930102  0.89335327 0.89091518\n",
+      " 0.89562478        nan        nan        nan        nan        nan\n",
+      " 0.89526148        nan        nan 0.8937414         nan 0.89583881\n",
+      " 0.8935226  0.89522199 0.89372661 0.89562478        nan        nan\n",
+      "        nan        nan        nan 0.89513966        nan        nan\n",
+      " 0.88242497        nan 0.8953986  0.89112371 0.89283812 0.88244668\n",
+      " 0.89531548        nan        nan        nan        nan        nan\n",
+      " 0.89519885        nan        nan 0.89109923        nan 0.8953986\n",
+      " 0.89311195 0.89302459 0.89103635 0.89531548        nan        nan\n",
+      "        nan        nan        nan 0.89522323        nan        nan\n",
+      " 0.89364499        nan 0.8953986  0.89360564 0.89525148 0.89363014\n",
+      " 0.89531548        nan        nan        nan        nan        nan\n",
+      " 0.89522825        nan        nan 0.88242292        nan 0.89540974\n",
+      " 0.89118203 0.89247041 0.88237081 0.89531261        nan        nan\n",
+      "        nan        nan        nan 0.89516871        nan        nan\n",
+      " 0.89109923        nan 0.89540974 0.89311213 0.89303851 0.89107503\n",
+      " 0.89531261        nan        nan        nan        nan        nan\n",
+      " 0.89513478        nan        nan 0.8936838         nan 0.89540974\n",
+      " 0.89361032 0.89435799 0.89364499 0.89531261        nan        nan\n",
+      "        nan        nan        nan]\n",
+      "  warnings.warn(\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8890644914606168 0.8884903146458952\n"
+      "Beste hyperparameters: {'C': 0.1, 'max_iter': 100, 'penalty': 'l1', 'solver': 'liblinear'}\n",
+      "0.888503696150905 0.88829868736912\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\j0rd4\\anaconda3\\envs\\no\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py:469: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n"
+      "c:\\Users\\j0rd4\\anaconda3\\envs\\no\\Lib\\site-packages\\sklearn\\linear_model\\_sag.py:349: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
@@ -2324,22 +2488,33 @@
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.metrics import f1_score\n",
     "from sklearn import svm\n",
-    "\n",
+    "from sklearn.model_selection import GridSearchCV\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X_resampled, y_resampled, test_size=0.3, random_state=42)\n",
+    "logreg = LogisticRegression(C=0.1, max_iter=300, penalty='l1', solver='saga')\n",
     "\n",
-    "logreg = LogisticRegression()\n",
+    "param_grid = {'C': [0.01, 0.1, 1, 10, 100],\n",
+    "              'penalty': ['l1', 'l2', 'elasticnet'],\n",
+    "              'max_iter': [100, 200, 300],\n",
+    "              'solver': ['liblinear', 'sag', 'lbfgs', 'saga', 'newton-cholesky']}\n",
+    "\n",
+    "grid_search = GridSearchCV(logreg, param_grid, cv=5, scoring='f1', n_jobs=-1)\n",
+    "grid_search.fit(X_train, y_train)\n",
+    "print(\"Beste hyperparameters:\", grid_search.best_params_)\n",
+    "\n",
     "logreg.fit(X_train, y_train)\n",
-    "\n",
+    "best_logreg = grid_search.best_estimator_\n",
     "logreg_pred = logreg.predict(X_test)\n",
+    "\n",
     "accuracy = accuracy_score(logreg_pred, y_test)\n",
     "f1 = f1_score(logreg_pred, y_test)\n",
+    "\n",
     "print(accuracy, f1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2362,7 +2537,7 @@
    "source": [
     "Met logistic regression kun je de kans van een binair resultaat, dus bijvoorbeeld waar of niet waar, bepalen op basis van één of meer voorspellende variabelen met behulp van een logistische functie.\n",
     "\n",
-    "Als eerste moet je natuurlijk eerst de data splitsen in train en test sets, voordat je uberhaupt iets kan doen. Als tweede moet je LogisticRegression importeren van sklearn.model_selection, dan moet je logistic regression 'initiaten' door lr = LogisticRegression() te gebruiken, dan moet je het model opde train set fitten met lr.fit(X_train, y_train). ALs vijfde moet je een prediction doen op de test set met predict(), voorbeeld: lr.predict(X_test). Als laatste moet je het resultaat weergeven, dit kan op verschillende manieren, zoals heatmaps en confusion matrix'. Hier is een voorbeeld van een confusion matrix: metrics.confusion_matrix(y_test, y_train), (Metrics moet eerst geïmporteerd worden)"
+    "Als tweede moet je de data splitsen in train en test sets, voordat je uberhaupt iets kan doen. Als tweede moet je LogisticRegression importeren van sklearn.model_selection, dan moet je logistic regression 'initiaten' met LogisticRegression() te gebruiken, dan moet je het model opde train set fitten met logreg.fit(X_train, y_train). ALs vijfde moet je een prediction doen op de test set met predict(), voorbeeld: logreg.predict(X_test). Als laatste moet je het resultaat weergeven, dit kan op verschillende manieren, zoals heatmaps en confusion matrix'. Hier is een voorbeeld van een confusion matrix: metrics.confusion_matrix(y_test, y_train), (Metrics moet eerst geïmporteerd worden), maar in dit model bepalen we accuarcy en de f1 score."
    ]
   },
   {
