--- a/ML_semester3.ipynb
+++ b/ML_semester3.ipynb
@@ -72,7 +72,7 @@
       "    if await self.run_code(code, result, async_=asy):\n",
       "  File \"c:\\Users\\jesse\\anaconda3\\Lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 3505, in run_code\n",
       "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"C:\\Users\\jesse\\AppData\\Local\\Temp\\ipykernel_19128\\564799908.py\", line 1, in <module>\n",
+      "  File \"C:\\Users\\jesse\\AppData\\Local\\Temp\\ipykernel_5572\\564799908.py\", line 1, in <module>\n",
       "    import pandas as pd\n",
       "  File \"c:\\Users\\jesse\\anaconda3\\Lib\\site-packages\\pandas\\__init__.py\", line 39, in <module>\n",
       "    from pandas.compat import (\n",
@@ -148,7 +148,7 @@
       "    if await self.run_code(code, result, async_=asy):\n",
       "  File \"c:\\Users\\jesse\\anaconda3\\Lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 3505, in run_code\n",
       "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"C:\\Users\\jesse\\AppData\\Local\\Temp\\ipykernel_19128\\564799908.py\", line 1, in <module>\n",
+      "  File \"C:\\Users\\jesse\\AppData\\Local\\Temp\\ipykernel_5572\\564799908.py\", line 1, in <module>\n",
       "    import pandas as pd\n",
       "  File \"c:\\Users\\jesse\\anaconda3\\Lib\\site-packages\\pandas\\__init__.py\", line 62, in <module>\n",
       "    from pandas.core.api import (\n",
@@ -224,7 +224,7 @@
       "    if await self.run_code(code, result, async_=asy):\n",
       "  File \"c:\\Users\\jesse\\anaconda3\\Lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 3505, in run_code\n",
       "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"C:\\Users\\jesse\\AppData\\Local\\Temp\\ipykernel_19128\\564799908.py\", line 1, in <module>\n",
+      "  File \"C:\\Users\\jesse\\AppData\\Local\\Temp\\ipykernel_5572\\564799908.py\", line 1, in <module>\n",
       "    import pandas as pd\n",
       "  File \"c:\\Users\\jesse\\anaconda3\\Lib\\site-packages\\pandas\\__init__.py\", line 62, in <module>\n",
       "    from pandas.core.api import (\n",
@@ -316,7 +316,7 @@
       "    if await self.run_code(code, result, async_=asy):\n",
       "  File \"c:\\Users\\jesse\\anaconda3\\Lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 3505, in run_code\n",
       "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"C:\\Users\\jesse\\AppData\\Local\\Temp\\ipykernel_19128\\564799908.py\", line 1, in <module>\n",
+      "  File \"C:\\Users\\jesse\\AppData\\Local\\Temp\\ipykernel_5572\\564799908.py\", line 1, in <module>\n",
       "    import pandas as pd\n",
       "  File \"c:\\Users\\jesse\\anaconda3\\Lib\\site-packages\\pandas\\__init__.py\", line 62, in <module>\n",
       "    from pandas.core.api import (\n",
@@ -1774,7 +1774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1820,21 +1820,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F1 Score: 0.964436832560951\n"
+      "F1 Score: 0.9216185201816095\n"
      ]
     }
    ],
    "source": [
     "X_train, X_test, y_train, y_test= train_test_split(X_resampled, y_resampled, test_size=0.3, random_state=42)\n",
     "\n",
-    "dt = DecisionTreeClassifier(criterion='entropy', splitter = 'best', max_depth = 16, min_samples_split = 2, min_samples_leaf = 1, max_features = 12, random_state=42)\n",
+    "dt = DecisionTreeClassifier(criterion='entropy', splitter = 'best', max_depth = 14, min_samples_split = 2, min_samples_leaf = 1, max_features = 12, random_state=42)\n",
     "dt.fit(X_train, y_train)\n",
     "y_pred = dt.predict(X_test)\n",
     "print(\"F1 Score:\", metrics.f1_score(y_test, y_pred))\n",
@@ -1871,16 +1871,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\jesse\\anaconda3\\Lib\\site-packages\\sklearn\\base.py:486: UserWarning: X has feature names, but DecisionTreeClassifier was fitted without feature names\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "#CSV aanmaken om in Kaggle te uploaden\n",
     "\n",
     "Decision_pred = dt.predict(test)\n",
     "Decision_pred_df = test_data_ids.to_frame()\n",
     "Decision_pred_df['stroke'] = Decision_pred\n",
-    "Decision_pred_df.to_csv('Decision_pred_23.csv', index=False)"
+    "Decision_pred_df.to_csv('Decision_pred_32.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "stroke\n",
+       "1    8298\n",
+       "0      90\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_dec = pd.read_csv('Decision_pred_32.csv')\n",
+    "\n",
+    "data_dec['stroke'].value_counts()"
    ]
   },
   {
@@ -2157,7 +2191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -2203,75 +2237,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\jesse\\anaconda3\\Lib\\site-packages\\sklearn\\model_selection\\_validation.py:540: FitFailedWarning: \n",
-      "13200 fits failed out of a total of 79200.\n",
-      "The score on these train-test partitions for these parameters will be set to nan.\n",
-      "If these failures are not expected, you can try to debug them by setting error_score='raise'.\n",
-      "\n",
-      "Below are more details about the failures:\n",
-      "--------------------------------------------------------------------------------\n",
-      "13200 fits failed with the following error:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\Users\\jesse\\anaconda3\\Lib\\site-packages\\sklearn\\model_selection\\_validation.py\", line 888, in _fit_and_score\n",
-      "    estimator.fit(X_train, y_train, **fit_params)\n",
-      "  File \"c:\\Users\\jesse\\anaconda3\\Lib\\site-packages\\sklearn\\base.py\", line 1466, in wrapper\n",
-      "    estimator._validate_params()\n",
-      "  File \"c:\\Users\\jesse\\anaconda3\\Lib\\site-packages\\sklearn\\base.py\", line 666, in _validate_params\n",
-      "    validate_parameter_constraints(\n",
-      "  File \"c:\\Users\\jesse\\anaconda3\\Lib\\site-packages\\sklearn\\utils\\_param_validation.py\", line 95, in validate_parameter_constraints\n",
-      "    raise InvalidParameterError(\n",
-      "sklearn.utils._param_validation.InvalidParameterError: The 'min_samples_split' parameter of GradientBoostingClassifier must be an int in the range [2, inf) or a float in the range (0.0, 1.0]. Got np.int64(1) instead.\n",
-      "\n",
-      "  warnings.warn(some_fits_failed_message, FitFailedWarning)\n",
-      "c:\\Users\\jesse\\anaconda3\\Lib\\site-packages\\sklearn\\model_selection\\_search.py:1103: UserWarning: One or more of the test scores are non-finite: [nan nan nan ...  0.  0.  0.]\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "({'criterion': 'friedman_mse',\n",
+       "({'criterion': 'squared_error',\n",
        "  'learning_rate': 0.1,\n",
        "  'loss': 'log_loss',\n",
-       "  'max_depth': 10,\n",
+       "  'max_depth': 9,\n",
        "  'max_features': 'sqrt',\n",
-       "  'min_samples_leaf': np.int64(1),\n",
-       "  'min_samples_split': np.int64(6),\n",
-       "  'n_estimators': np.int64(6)},\n",
-       " np.float64(0.052683041104482506))"
+       "  'n_estimators': np.int64(9)},\n",
+       " np.float64(0.04188351173425801))"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "gbc = GradientBoostingClassifier(random_state=42)\n",
-    "param_grid = {'loss': ['log_loss', 'exponential'], 'learning_rate': [0.1], 'n_estimators': np.arange(1,10),'criterion': ['friedman_mse', 'squared_error'], 'max_depth': [1,2,3,4,5,6,7,8,9,10], 'min_samples_split': np.arange(1,7), 'min_samples_leaf': np.arange(1,7), 'max_features': ['sqrt']}\n",
+    "param_grid = {'loss': ['log_loss', 'exponential'], 'learning_rate': [0.1], 'n_estimators': np.arange(1,10),'criterion': ['friedman_mse', 'squared_error'], 'max_depth': [1,2,3,4,5,6,7,8,9,10], 'max_features': ['sqrt']}\n",
     "gbc_cv = GridSearchCV(estimator=gbc, param_grid=param_grid, cv=5, scoring='f1', n_jobs=-1)\n",
     "gbc_cv.fit(X, y) \n",
     "\n",
-    "gbc_cv.best_params_, gbc_cv.best_score_\n"
+    "gbc_cv.best_params_, gbc_cv.best_score_\n",
+    "\n",
+    "#param_grid = {'loss': ['log_loss', 'exponential'], 'learning_rate': [0.1], 'n_estimators': np.arange(1,10),'criterion': ['friedman_mse', 'squared_error'], 'max_depth': [1,2,3,4,5,6,7,8,9,10], 'min_samples_split': np.arange(1,7), 'min_samples_leaf': np.arange(1,7), 'max_features': ['sqrt']}\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F1 Score: 0.9173835581572919\n"
+      "F1 Score: 0.9227018791264602\n"
      ]
     }
    ],
@@ -2279,6 +2286,7 @@
     "X_train, X_test, y_train, y_test= train_test_split(X_resampled, y_resampled, test_size=0.3, random_state=42)\n",
     "\n",
     "gbc = GradientBoostingClassifier(loss = 'log_loss', learning_rate = 0.1, n_estimators = 7, criterion = 'friedman_mse', min_samples_split = 2, min_samples_leaf = 1, max_depth = 8, max_features = 'sqrt', random_state=42)\n",
+    "\n",
     "\n",
     "gbc.fit(X_train, y_train)\n",
     "y_pred = gbc.predict(X_test)\n",
@@ -2292,7 +2300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2301,8 +2309,8 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.92      0.91      0.92      9768\n",
-      "           1       0.92      0.92      0.92      9798\n",
+      "           0       0.93      0.90      0.91      9768\n",
+      "           1       0.90      0.93      0.92      9798\n",
       "\n",
       "    accuracy                           0.92     19566\n",
       "   macro avg       0.92      0.92      0.92     19566\n",
@@ -2317,7 +2325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -2333,30 +2341,30 @@
     "gbc_pred = gbc.predict(test)\n",
     "gbc_pred_df = test_data_ids.to_frame()\n",
     "gbc_pred_df['stroke'] = gbc_pred\n",
-    "gbc_pred_df.to_csv('gbc_pred_19.csv', index=False)"
+    "gbc_pred_df.to_csv('gbc_pred_32.csv', index=False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "stroke\n",
-       "0    7550\n",
-       "1     838\n",
+       "1    8336\n",
+       "0      52\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_gbc = pd.read_csv('gbc_pred_13.csv')\n",
+    "data_gbc = pd.read_csv('gbc_pred_32.csv')\n",
     "\n",
     "data_gbc['stroke'].value_counts()"
    ]
@@ -2366,19 +2374,6 @@
    "metadata": {},
    "source": [
     "XG Boost"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<strong> Random Forest </strong>\n",
-    "\n",
-    "Random forest is gebaseerd op bagging. Bij bagging worden meerdere versies van hetzelfde model getraind op verschillende subsets van de dataset (datapunten maken, met \"terugleggen\"). Doordat de trees onafhankelijk van elkaar worden getrained, kunnen ze parallel worden verwerkt. Hierdoor is de trainingstijd dus relatief snel.  Na het trainen van elke tree, wordt de uiteindelijke voorspelling gemaakt door het gemiddelde te pakken bij regressie of de meerderheid van stemmen bij classificatie (dus welke class het vaakste is voorspeld).\n",
-    "\n",
-    "<strong> Gradient Descent Boosting </strong>\n",
-    "\n",
-    "Boosting is een net andere manier van modellen trainen, aangezien dit sequentieel wordt gedaan in plaats van parallel. Dit betekent dat je ze sequentieel traint en elk volgend model dus leert van de fouten van het vorige model om zich zo dus te verbeteren. De samples die verkeerd zijn voorspeld, worden dus zwaarder meegenomen bij het trainen van het model erna. De focus ligt dus echt op moeilijk te voorspellen datapunten. Door het sequentieel trainen, kost het trainen van zo een model dus relatief veel tijd in vergelijking met een random forest."
    ]
   },
   {
@@ -2400,7 +2395,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "<strong> Random Forest </strong>\n",
+    "\n",
+    "Random forest is gebaseerd op bagging. Bij bagging worden meerdere versies van hetzelfde model getraind op verschillende subsets van de dataset (datapunten maken, met \"terugleggen\"). Doordat de trees onafhankelijk van elkaar worden getrained, kunnen ze parallel worden verwerkt. Hierdoor is de trainingstijd dus relatief snel.  Na het trainen van elke tree, wordt de uiteindelijke voorspelling gemaakt door het gemiddelde te pakken bij regressie of de meerderheid van stemmen bij classificatie (dus welke class het vaakste is voorspeld).\n",
+    "\n",
+    "<strong> Gradient Descent Boosting </strong>\n",
+    "\n",
+    "Boosting is een net andere manier van modellen trainen, aangezien dit sequentieel wordt gedaan in plaats van parallel. Dit betekent dat je ze sequentieel traint en elk volgend model dus leert van de fouten van het vorige model om zich zo dus te verbeteren. De samples die verkeerd zijn voorspeld, worden dus zwaarder meegenomen bij het trainen van het model erna. De focus ligt dus echt op moeilijk te voorspellen datapunten. Door het sequentieel trainen, kost het trainen van zo een model dus relatief veel tijd in vergelijking met een random forest."
+   ]
   },
   {
    "cell_type": "markdown",
