--- a/ML_semester3.ipynb
+++ b/ML_semester3.ipynb
@@ -2670,7 +2670,7 @@
    "source": [
     "Met logistic regression kun je de kans van een binair resultaat, dus bijvoorbeeld waar of niet waar, bepalen op basis van één of meer voorspellende variabelen met behulp van een logistische functie.\n",
     "\n",
-    "Als tweede moet je de data splitsen in train en test sets, voordat je uberhaupt iets kan doen. Als tweede moet je LogisticRegression importeren van sklearn.model_selection, dan moet je logistic regression 'initiaten' met LogisticRegression() te gebruiken, dan moet je het model opde train set fitten met logreg.fit(X_train, y_train). ALs vijfde moet je een prediction doen op de test set met predict(), voorbeeld: logreg.predict(X_test). Als laatste moet je het resultaat weergeven, dit kan op verschillende manieren, zoals heatmaps en confusion matrix'. Hier is een voorbeeld van een confusion matrix: metrics.confusion_matrix(y_test, y_train), (Metrics moet eerst geïmporteerd worden), maar in dit model bepalen we accuarcy en de f1 score."
+    "Als tweede moet je de data splitsen in train en test sets, voordat je uberhaupt iets kan doen. Als tweede moet je LogisticRegression importeren van sklearn.model_selection, dan moet je logistic regression 'initiaten' met LogisticRegression() te gebruiken, dan moet je het model opde train set fitten met logreg.fit(X_train, y_train). ALs vijfde moet je een prediction doen op de test set met predict(), voorbeeld: logreg.predict(X_test). Als laatste moet je het model scoren op een bepaalde metric, voor dit model is de f1-score gekozen, omdat het een gemiddelde is tussen precision en recall."
    ]
   },
   {
